<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    app:cardCornerRadius="13dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#292929">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#171717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/mapimage"
                    android:layout_width="285dp"
                    android:layout_height="185dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/ShapeAppearanceOverlay.Avatar"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/cardviewbackground"
                    android:text="@string/city_name"
                    android:textAllCaps="false"
                    android:textColor="#CFCFCF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mapimage" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="56dp"
                    android:background="@drawable/cardviewbackground"
                    android:text="@string/state_name"
                    android:textAllCaps="false"
                    android:textColor="#CFCFCF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mapimage" />

                <TextView
                    android:id="@+id/rideid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ride_id_002"
                    android:textColor="#CFCFCF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/city"
                    app:layout_constraintStart_toStartOf="@+id/city"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

                <TextView
                    android:id="@+id/path"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxLines="2"
                    android:text="@string/station_path_20_39_40_42_54_63_72_88_98"
                    android:textColor="#CFCFCF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/orign"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/orign"
                    app:layout_constraintTop_toBottomOf="@+id/orign">

                </TextView>

                <TextView
                    android:id="@+id/orign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/origin_station_20"
                    android:textColor="#CFCFCF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/rideid"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/rideid"
                    app:layout_constraintTop_toBottomOf="@+id/rideid">
                </TextView>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_15th_feb_2022_16_33"
                    android:textColor="#CFCFCF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/path"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/path"
                    app:layout_constraintTop_toBottomOf="@+id/path">
                </TextView>

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/distance_0"
                    android:textColor="#CFCFCF"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/date"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/date"
                    app:layout_constraintTop_toBottomOf="@+id/date">
                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>